RocketLaunchers added to levelEditor, fixed bug with waste of memory

--- a/level_editor/index.html
+++ b/level_editor/index.html
@@ -22,13 +22,15 @@ SCALE<input id="scale" type="range" value=1 max=100 min=10 step=1></input>
 
 DIR<input id="dir" type="number" value=0></input><br>
 W<input id="w" type="number" value=1></input><br>
-BV<input id="bv" type="number" value=50></input><br>
-CD<input id="cd" type="number" value=10></input><br>
+BV<input id="bv" type="number" value=10></input><br>
+CD<input id="cd" type="number" value=1></input><br>
+DIRECTIONS<input id="directions" type="number" value=1></input><br>
 <br>
 <button onclick="mouse.mode = !mouse.mode">MODE</button>
 <button onclick="mouse.mode = 2">TURRET</button>
 <button onclick="mouse.mode = 3">EXIT</button>
 <button onclick="mouse.mode = 4">SHIELD</button>
+<button onclick="mouse.mode = 5">ROCKET LAUNCHER</button>
 <button onclick="generate();">GENERATE!</button>
 <br>
 
