--- a/level_editor/index.html
+++ b/level_editor/index.html
@@ -31,6 +31,7 @@ DIRECTIONS<input id="directions" type="number" value=1></input><br>
 <button onclick="mouse.mode = 3">EXIT</button>
 <button onclick="mouse.mode = 4">SHIELD</button>
 <button onclick="mouse.mode = 5">ROCKET LAUNCHER</button>
+<button onclick="mouse.mode = 6">LASER CARRIER</button>
 <button onclick="generate();">GENERATE!</button>
 <br>
 
