robots now can avoid walls

--- a/level_editor/index.html
+++ b/level_editor/index.html
@@ -24,14 +24,18 @@ DIR<input id="dir" type="number" value=0></input><br>
 W<input id="w" type="number" value=1></input><br>
 BV<input id="bv" type="number" value=10></input><br>
 CD<input id="cd" type="number" value=1></input><br>
+MF<input id="mf" type="number" value=30></input><br>
+SHIELDS<input id="shields" type="number" value=30></input><br>
 DIRECTIONS<input id="directions" type="number" value=1></input><br>
 <br>
 <button onclick="mouse.mode = !mouse.mode">MODE</button>
+<button onclick="mouse.mode = -1">SPIKES</button>
 <button onclick="mouse.mode = 2">TURRET</button>
 <button onclick="mouse.mode = 3">EXIT</button>
 <button onclick="mouse.mode = 4">SHIELD</button>
 <button onclick="mouse.mode = 5">ROCKET LAUNCHER</button>
 <button onclick="mouse.mode = 6">LASER CARRIER</button>
+<button onclick="mouse.mode = 7">ROBOT</button>
 <button onclick="generate();">GENERATE!</button>
 <br>
 
